--- a/16EC105_16EC118/Lab_Report/main.tex
+++ b/16EC105_16EC118/Lab_Report/main.tex
@@ -12,6 +12,7 @@
 \include{import}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
+\usepackage{titlesec}
 \usepackage{amssymb}
 \lstset{basicstyle = \ttfamily}
 \usepackage{vmargin}
@@ -38,6 +39,9 @@
 	pdfsubject={VLSI Lab},
 	pdfnewwindow=true,      
 }
+\titlespacing*{\section}{0pt}{1ex}{1ex}
+\titlespacing*{\subsection}{0pt}{0.5ex}{0.5ex}
+\titlespacing*{\subsubsection}{0pt}{0.5ex}{0.5ex}
 \makeatletter
 \let\thetitle\@title
 \let\theauthor\@author
@@ -70,7 +74,7 @@
 		
 		\vfill
 	\end{titlepage}
-	
+
 	\tableofcontents
 	\pagebreak
 	
@@ -82,7 +86,7 @@
 		\item Transfer Function
 		\item Noise Margin
 		\item Risetime and Fall time
-		\item Progation Delay
+		\item Propagation Delay
 		\item Power and Energy consumed
 	\end{enumerate}
 	with variation in $\text{R}_\text{L}$ and W of the load resistor and pull-down transistor. Along with this, also calculate power and energy consumed for non ideal step input for resistive load inverter.
@@ -97,28 +101,28 @@
 			\label{fig::resloadckt}
 		\end{center}
 	\end{figure}
-	
+
 	\subsection{Netlist}
-	\begin{lstlisting}
-	* transistor and other circuit components definition
-	m0 out in 0 0 cmosn l=2.5u w=10u
-	rl supply out 7k
-	cl out meas 5n
-	
-	* voltage source
-	vdd supply 0 dc 3.3
-	vin in 0 dc 3.3 pulse(0 3.3 0 0.1n 0.1n 0.5m 1m)
-	vcap meas 0 dc 0
-	\end{lstlisting}
-	
-	\subsection{Analysis}
-	
-	Transfer characteristics were plotted for different values of $\text{R}_\text{L}$. and different W and L values for the driver NMOS. The plots obtained were as follows:
-	
-	The curves moving to the right imply that the threshold voltage is increasing and moving to the right. Figure(\ref{fig::varying_rl_dc}) indicates that as $\text{R}_\text{L}$. increases the voltage drop across it increases. This implies that the graph moves to the left as $\text{R}_\text{L}$. increases.\\
-	Figure(\ref{fig::varying_rl_time}) indicates that as $\text{R}_\text{L}$ increases the pull up resistance to the load to the load increases. This results in the rise time increasing for an increase in $\text{R}_\text{L}$.\\
-	Figure(\ref{fig::varying_rl_vcap}) indicates that as $\text{R}_\text{L}$. increases the peak current drawn by the capacitor decreases. Figure(\ref{fig::varying_rl_vdd}) indicates that the current drawn from $\text{V}_{\text{DD}}$ is the same.
-	\begin{figure}[H]
+    \begin{lstlisting}
+    * transistor and other circuit components definition
+    m0 out in 0 0 cmosn l=2.5u w=10u
+    rl supply out 7k
+    cl out meas 5n
+    
+    * voltage source
+    vdd supply 0 dc 3.3
+    vin in 0 dc 3.3 pulse(0 3.3 0 0.1n 0.1n 0.5m 1m)
+    vcap meas 0 dc 0
+    \end{lstlisting}
+    
+    \subsection{Analysis and Observations}
+    
+    Transfer characteristics were plotted for different values of $\text{R}_\text{L}$ and different W and L values for the driver NMOS. The plots obtained were as follows:
+    
+    The curves moving to the right imply that the threshold voltage is increasing and moving to the right. Figure(\ref{fig::varying_rl_dc}) indicates that as $\text{R}_\text{L}$ increases the voltage drop across it increases. This implies that the graph moves to the left as $\text{R}_\text{L}$ increases.\\
+    Figure(\ref{fig::varying_rl_time}) indicates that as $\text{R}_\text{L}$ increases the pull up resistance to the load increases. This results in the rise time increasing for an increase in $\text{R}_\text{L}$.\\
+    Figure(\ref{fig::varying_rl_vcap}) indicates that as $\text{R}_\text{L}$. increases the peak current drawn by the capacitor decreases. Figure(\ref{fig::varying_rl_vdd}) indicates that the current drawn from $\text{V}_{\text{DD}}$ is the same.
+    \begin{figure}[H]
 		\begin{center}
 			\includegraphics[scale=0.25]{images/inverter_Rl_dc.png}
 			\caption{Transfer Characteristics Varying $\text{R}_\text{L}$(left to right: 10K, 7K, 5K)}
@@ -149,15 +153,119 @@
 		\end{center}
 	\end{figure}
 	
+	Figure(\ref{fig::varying_w_dc}) indicates that as W increases the voltage drop across the load $\text{R}_\text{L}$ increases. This implies that the graph moves to the left as W increases.\\
+    Figure(\ref{fig::varying_w_time}) indicates that as W increases the pull-down resistance to the ground decreases. This results in the rise time decreaseing for an increase in W.\\
+    Figure(\ref{fig::varying_w_vcap}) indicates that as W increases the peak current drawn by the capacitor increases. Figure(\ref{fig::varying_w_vdd}) indicates that the current drawn from $\text{V}_{\text{DD}}$ is the same.
+    \begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_w_dc.png}
+			\caption{Transfer Characteristics Varying W}
+			\label{fig::varying_w_dc}
+		\end{center}
+	\end{figure}
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_w_tran.png}
+			\caption{Transient Response Varying W}
+			\label{fig::varying_w_time}
+		\end{center}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_w_vcap.png}
+			\caption{Capacitor Current Varying W}
+			\label{fig::varying_w_vcap}
+		\end{center}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_w_vdd.png}
+			\caption{Transient Response Varying W}
+			\label{fig::varying_w_vdd}
+		\end{center}
+	\end{figure}
 	
 	
-	\newpage
+	Figure(\ref{fig::varying_l_dc}) indicates that as L increases, the current decreases and the voltage drop across the load $\text{R}_\text{L}$ decreases. This implies that the graph moves to the right as L increases.\\
+    Figure(\ref{fig::varying_l_time}) indicates that as L increases the pull-down resistance to the ground increases. This results in the rise time increasing for an increase in L.\\
+    Figure(\ref{fig::varying_l_vdd}) indicates that the current drawn from $\text{V}_{\text{DD}}$ is the same.
+    \begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_l_dc.png}
+			\caption{Transfer Characteristics Varying L}
+			\label{fig::varying_l_dc}
+		\end{center}
+	\end{figure}
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_l_tran.png}
+			\caption{Transient Response Varying L}
+			\label{fig::varying_l_time}
+		\end{center}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_l_vcap.png}
+			\caption{Capacitor Current Varying L}
+			\label{fig::varying_l_vcap}
+		\end{center}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale=0.25]{images/inverter_l_vdd.png}
+			\caption{Transient Response Varying L}
+			\label{fig::varying_l_vdd}
+		\end{center}
+	\end{figure}
+	
+    
+    
+    \newpage
 	\section{CMOS Inverter Layout and Characterisation} 
+	
+	\subsection{Aim}
+	
+	\subsection{Circuit Diagram}
 	\begin{figure}[H]
 		\begin{center}
 			\input{images/cmos_inverter.tex}
 			\caption{Circuit Diagram of CMOS Inverter}
 			\label{fig::cmosinvckt}
+		\end{center}
+	\end{figure}
+	
+	\subsection{Introduction}
+	Inverter is one that inverts the signal supplied at its input. If input is made high or logic level is 1, then the output has a logic level 0 and vice-versa. CMOS stands for Complementary Metal Oxide Semiconductor. CMOS is one of the various families in logic gate design in Digital VLSI. A major difference in this family is, there is both a pull-up network as well as the pull-down network and only one of the path is on at any given time. The output is taken at the junction of pull-up and pull-down network. When pull-up network constructed using PMOS is ON, output capacitor is charged by the supply and when pull-down network constructed using NMOS is ON, the capacitor initially charged now discharges through this path to groun
+	
+	\subsection{Layout}
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale = 0.5]{images/layout.png}
+			\caption{Layout of CMOS Inverter}
+			\label{fig::cmoslayout}
+		\end{center}
+	\end{figure}
+	
+	\subsection{Netlist}
+	
+	\subsection{Analysis and Observation}
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale = 0.2]{images/layout_dc.png}
+			\caption{CMOS Inverter transfer characteristics}
+			\label{fig::layout_dc}
+		\end{center}
+	\end{figure}
+	
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[scale = 0.2]{images/layout_tran_cl.png}
+			\caption{CMOS Inverter transient characteristics with various $\text{C}_\text{L}$(5nF, 20nF, 50nF)}
+			\label{fig::layout_tran}
 		\end{center}
 	\end{figure}
 	
